<resources>
    <string name="app_name">work n now</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="notification">Notification</string>
    <string name="orders">Orders</string>
    <string name="favorite">Favorites</string>
    <string name="cart">Cart</string>
    <string name="setting">Settings </string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="most_popular">"Most Popular "</string>
    <string name="search">Search...</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="google_login">Continue With Google</string>
    <string name="Login">LOGIN</string>
    <string name="forget_password">Forget Password </string>
    <string name="machine_name">"Machine Name "</string>
    <string name="size">Size</string>
    <string name="suger">Suger</string>
    <string name="extra">Extras</string>
    <string name="total">"Total : "</string>
    <string name="find_nearest">Find your nearest machine</string>
    <string name="change_lang">"Change Language "</string>
    <string name="support_title">Welcome to you in Supporting</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">Whats App</string>
    <string name="send_mail">Send Mail</string>
    <string name="support">Support</string>
    <string name="add_to_cart">Addm To Cart</string>
    <string name="go_to_login">Dont have account ? Register</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="confirm_order_message">You will revieve your Order from Elrehab Gate9 , Be ready</string>
    <string name="ok">Done</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="order_details">Order Details</string>
    <string name="today_orders">Today sales report</string>
    <string name="buy_now">Buy again</string>
    <string name="end_request">"End the request "</string>
    <string name="send_code">Send code</string>
    <string name="save">save</string>
</resources>
