<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />

<!--        <item-->
<!--            android:id="@+id/nav_menus"-->
<!--            android:title="@string/menu" />-->
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_orders"
            android:title="@string/orders" />


        <item
            android:id="@+id/nav_favorites"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_cart"
            android:title="@string/cart" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_terms_conditions"
            android:title="@string/terms_conditions" />

        <item
            android:id="@+id/nav_login"
            android:title="@string/Login" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />


    </group>


</menu>
