<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.contactus.ContactUsFragment">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:src="@drawable/contact_us"
        />


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support_title"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/larg_text"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/twitter"
            android:textSize="@dimen/larg_text"
            android:textColor="@color/text_color"
            android:drawablePadding="25dp"
            android:drawableStart="@drawable/twitter"
            android:text="@string/twitter"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/whatsapp"
            android:textSize="@dimen/larg_text"
            android:textColor="@color/text_color"
            android:drawablePadding="25dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/whats_app"
            android:text="@string/whatsapp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail"
            android:textSize="@dimen/larg_text"
            android:textColor="@color/text_color"
            android:drawablePadding="25dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/mail"
            android:text="@string/send_mail"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/support"
            android:textSize="@dimen/larg_text"
            android:textColor="@color/text_color"
            android:drawablePadding="25dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/support"
            android:text="@string/support"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>