<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.authentication.login.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="30dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/delimiter"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Welcome"
            android:textColor="@color/coffee_color"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delimiter" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_inputs"
            android:hint="@string/user_name"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_inputs"
            android:hint="@string/email"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_inputs"
            android:hint="@string/mobile"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_inputs"
            android:hint="@string/password"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobile"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_solid_inputs"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintWidth_percent="0.34" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_inputs"
            android:gravity="center"
            android:paddingStart="15dp"
            android:text="@string/google_login"
            android:textColor="@color/red"
            android:drawableStart="@drawable/googleg_standard_color_18"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in"
            app:layout_constraintWidth_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>