<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_confirm_order"
    android:padding="10dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="10dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/confirm_order"
        android:textColor="@color/white"
        android:textSize="@dimen/larg_text"
        android:textStyle="bold" />


    <View
        android:id="@+id/delimiter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_dark"
        app:layout_constraintTop_toBottomOf="@+id/errorMessageTextView" />


    <TextView
        android:id="@+id/logout_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_order_message"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMessageTextView" />


    <TextView
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_solid_inputs"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_title" />


</androidx.constraintlayout.widget.ConstraintLayout>
