<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/bon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/logo2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:layout_marginTop="200dp"
        android:src="@drawable/gurve_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo"
       />

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:layout_marginTop="00dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo2"
        />



    <!--    </androidx.cardview.widget.CardView>-->
    <View
            android:id="@+id/delimiter"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:background="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Welcome"
            android:visibility="invisible"
            android:textColor="@color/coffee_color"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delimiter" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_inputs"
            android:hint="@string/user_name"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_inputs"
            android:hint="@string/email"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_inputs"
            android:hint="@string/mobile"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_inputs"
            android:hint="@string/password"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobile"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_solid_inputs"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintWidth_percent="0.34" />

    </androidx.constraintlayout.widget.ConstraintLayout>
