<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="5dp">

    <ImageView
        android:id="@+id/power"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginTop="5dp"
        android:tint="@color/text_color"
        android:src="@android:drawable/ic_lock_power_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/close" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="10dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/text_color"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/power"
        app:layout_constraintStart_toEndOf="@+id/power"
        app:layout_constraintTop_toTopOf="@+id/power" />

    <View
        android:id="@+id/delimiter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_dark"
        app:layout_constraintTop_toBottomOf="@+id/errorMessageTextView" />


    <ImageView
        android:id="@+id/close"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logout_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="logout_message"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delimiter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_title">

        <TextView
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_solid_inputs"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dismissButton"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_solid_inputs"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
